modify env files

--- a/api/env/development.env.template
+++ b/api/env/development.env.template
@@ -1,21 +1,24 @@
 ## Environment ##
-NODE_ENV=production
+NODE_ENV=development
 
 
 ## Server ##
-PORT=8081
+PORT=9000
 HOST=localhost
 
+## Database ##
+DATABASE_PASSWORD=XXXXXXX
+DATABASE_HOST=XXXXXXX
+DATABASE_USERNAME=XXXXXXX
 
 ## Setup jet-logger ##
-JET_LOGGER_MODE=FILE
+JET_LOGGER_MODE=CONSOLE
 JET_LOGGER_FILEPATH=jet-logger.log
 JET_LOGGER_TIMESTAMP=TRUE
 JET_LOGGER_FORMAT=LINE
 
 
 ## Authentication ##
-# SECURE_COOKIE 'false' here for demo-ing. But ideally should be true.
 COOKIE_DOMAIN=localhost
 COOKIE_PATH=/
 SECURE_COOKIE=false
