--- a/api/env/production.env.template
+++ b/api/env/production.env.template
@@ -1,20 +1,25 @@
 ## Environment ##
-NODE_ENV=development
+NODE_ENV=production
 
 
 ## Server ##
-PORT=9000
+PORT=8081
 HOST=localhost
 
+## Database ##
+DATABASE_PASSWORD=XXXXXXX
+DATABASE_HOST=XXXXXXX
+DATABASE_USERNAME=XXXXXXX
 
 ## Setup jet-logger ##
-JET_LOGGER_MODE=CONSOLE
+JET_LOGGER_MODE=FILE
 JET_LOGGER_FILEPATH=jet-logger.log
 JET_LOGGER_TIMESTAMP=TRUE
 JET_LOGGER_FORMAT=LINE
 
 
 ## Authentication ##
+# SECURE_COOKIE 'false' here for demo-ing. But ideally should be true.
 COOKIE_DOMAIN=localhost
 COOKIE_PATH=/
 SECURE_COOKIE=false
