--- a/api/env/test.env.template
+++ b/api/env/test.env.template
@@ -6,6 +6,10 @@ NODE_ENV=test
 PORT=4000
 HOST=localhost
 
+## Database ##
+DATABASE_PASSWORD=XXXXXXX
+DATABASE_HOST=XXXXXXX
+DATABASE_USERNAME=XXXXXXX
 
 ## Setup jet-logger ##
 JET_LOGGER_MODE=CONSOLE
