--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,7 @@
     "module-alias": "^2.2.3",
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
+    "pg": "^8.12.0",
     "ts-command-line-args": "^2.5.1"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "@types/jsonfile": "^6.1.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.2",
+    "@types/pg": "^8.11.6",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
