setup for heroku step 1

--- a/api/env/production.env.template
+++ b/api/env/production.env.template
@@ -10,6 +10,7 @@ HOST=localhost
 DATABASE_PASSWORD=XXXXXXX
 DATABASE_HOST=XXXXXXX
 DATABASE_USERNAME=XXXXXXX
+DATABASE_PORT=XXXXXXX
 
 ## Setup jet-logger ##
 JET_LOGGER_MODE=FILE
